Upgraded Java from 8 to 16.